that fixed view on browser, now trying to eliminate right side extra space

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,3 +165,7 @@ hr {
     clip-path: inset(50%);
     white-space: nowrap;
 }
+
+html, body {
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
